# check-boundaries-detection

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  annotation.json  main.cpp  via_export_json (1).json
images/: result.txt
output/html/: doxygen_crawl.html  files.html  globals.html  globals_func.html  globals_type.html  graph_legend.html  index.html  main_8cpp.html  main_8cpp.js  main_8cpp__incl.dot  navtreedata.js  navtreeindex0.js
output/html/search/: all_2.js  functions_0.js  searchdata.js
output/latex/: main_8cpp.tex  main_8cpp.tex.tmp  main_8cpp__incl.dot  refman.aux  refman.tex
